Added mixins for font and others

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,8 @@
-<h1>OKR</h1>
+<h1>Material Theme</h1>
 <router-outlet></router-outlet>
+
+<a href="#" appButton="primary">Hey there</a>
+
+<a href="#" appButton>Hey there</a>
+
+<p class="just-blue">Hello there blue</p>
